Working version with before{} mixing